--- a/package.json
+++ b/package.json
@@ -4,20 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --open --mode development",
-    "dev:linux": "vite --mode development",
-    "build:test": "vite build --mode test",
-    "build": "vue-tsc --noEmit && vite build --mode release",
-    "build:type": "vue-tsc --noEmit",
-    "build:site": "vue-tsc --noEmit && vite build --mode site",
-    "preview": "vite preview",
-    "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0",
-    "lint:fix": "eslint --ext .vue,.js,jsx,.ts,.tsx ./ --max-warnings 0 --fix",
-    "stylelint": "stylelint src/**/*.{html,vue,sass,less}",
-    "stylelint:fix": "stylelint --fix src/**/*.{html,vue,css,sass,less}",
-    "prepare": "node -e \"if(require('fs').existsSync('.git')){process.exit(1)}\" || is-ci || husky install",
-    "site:preview": "npm run build && cp -r dist _site",
-    "test": "echo \"no test specified,work in process\"",
-    "test:coverage": "echo \"no test:coverage specified,work in process\""
+    "build": "vue-tsc --noEmit && vite build --mode release"
   },
   "dependencies": {
     "@vueuse/core": "^12.3.0",
