--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-tsc --noEmit && vite build --mode release"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.1.1",
     "@vueuse/core": "^12.3.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
