提交一版代码编码问题，容器列表切换不展示的问题

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --open --mode development",
-    "build": "vue-tsc --noEmit && vite build --mode release"
+    "build": "vue-tsc --noEmit && vite build"
   },
   "dependencies": {
     "@stomp/stompjs": "^7.1.1",
