--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-# 打包路径 根据项目不同按需配置
-VITE_BASE_URL = /
-VITE_IS_REQUEST_PROXY = true
-VITE_API_URL = https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com
-VITE_API_URL_PREFIX = /api
+# 生产环境配置
+NODE_ENV=production
+VITE_API_URL=/api
+VITE_IS_REQUEST_PROXY=true
+VITE_API_URL_PREFIX=/api 
+
